test/files/neg/t6162-inheritance/defn.scala
package scala.t6126

@deprecatedInheritance("`Foo` will be made final in a future version.", "2.10.0")
class Foo

@deprecatedInheritance()
trait T

@deprecatedInheritance()
trait S
